--- a/package.json
+++ b/package.json
@@ -48,16 +48,17 @@
     "babel-runtime": "^6.26.0",
     "dva-core": "^2.0.2",
     "dva-loading": "^3.0.20",
+    "js-base64": "^2.5.2",
     "lodash-es": "^4.17.15",
     "moment": "^2.24.0",
     "nerv-devtools": "^1.5.5",
     "nervjs": "^1.5.5",
     "path-to-regexp": "^6.1.0",
+    "prop-types": "latest",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
-    "taro-ui": "^2.2.4",
-    "prop-types": "latest"
+    "taro-ui": "^2.2.4"
   },
   "devDependencies": {
     "@babel/plugin-proposal-decorators": "^7.8.3",
